# CISC-5006

./: .gitignore  CISC-5006-HW1.md  CISC-5006-HW10.md  CISC-5006-HW2.md  CISC-5006-HW3.md  CISC-5006-HW5.md  CISC-5006-HW6.md  CISC-5006-HW7.md  CISC-5006-HW8.md  CISC-5006-HW9.md  README.md  cpp-style-guide.md
final/: CMakeLists.txt  README.md
final/include/: open_addressed_hash_table.h  trie.h
final/test/: CMakeLists.txt  open_hash_table_tests.cpp  trie_tests.cpp
midterm/: CMakeLists.txt  README.md  main.cpp
midterm/include/: linked_string.h
midterm/test/: CMakeLists.txt  catch_amalgamated.cpp  tests.cpp
