CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(midterm VERSION 1.0.0)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_WARNING_FLAGS "-Wall -Wextra -Wpedantic")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_WARNING_FLAGS}")

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)

ADD_SUBDIRECTORY(test)